--- a/app/src/main/res/layout/empty_drops.xml
+++ b/app/src/main/res/layout/empty_drops.xml
@@ -22,6 +22,7 @@
         android:paddingLeft="60dp"
         android:paddingRight="60dp"
         android:paddingTop="8dp"
+        android:textColor="@color/btn_add_color"
         android:text="@string/str_add_drop"
         android:textAllCaps="false" />
 
