--- a/app/src/main/res/color/btn_add_color.xml
+++ b/app/src/main/res/color/btn_add_color.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     
 
-    <item android:color="#241543" android:state_pressed="true"></item>
-    <item android:color="#FFF"></item>
+    <item android:color="@color/dark_blue" android:state_pressed="true"></item>
+    <item android:color="@android:color/white"/>
 </selector>
