--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="purple">#B691FF</color>
+    <color name="green">#05FFCA</color>
     <color name="dark_blue">#241543</color>
-    <color name="white">#FFF</color>
+    <!--<color name="white">#FFF</color>-->
 </resources>
